[Java] change benchmarks package structure